(include_subdirs unqualified)

(melange.emit
 (target example)
 (compile_flags -w -27)
 (alias example)
 (libraries reshowcase reason-react styled-ppx.melange)
 (module_systems es6)
 (preprocess
  (pps melange.ppx reason-react-ppx styled-ppx)))

(rule
 (target Demo__.re)
 (deps
  (glob_files_rec *[!D][!e][!m][!o][!_][!_].re))
 (action
  (with-stdout-to
   %{target}
   (run
    /Users/rusty/code/tools/reshowcase/commands/reshowcase
    generate-demo
    --examples-path=/Users/rusty/code/tools/reshowcase/example))))
